k means clustering and pca

--- a/penguin_kmeans.ipynb
+++ b/penguin_kmeans.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 1,
    "id": "34ba40a0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 2,
    "id": "84d84836",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "[344 rows x 5 columns]"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 3,
    "id": "866c99de",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 4,
    "id": "2d76901b",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 5,
    "id": "8113279c",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "[335 rows x 5 columns]"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 6,
    "id": "a1991d9d",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
     }
    ],
    "source": [
-    "x = df[['culmen_length_mm','culmen_depth_mm','flipper_length_mm','body_mass_g']].dropna()\n",
+    "x = df[['culmen_length_mm','culmen_depth_mm','flipper_length_mm','body_mass_g']]\n",
     "\n",
     "kmeans = KMeans(n_clusters=2, random_state=42)\n",
     "kmeans.fit(x)\n",
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 7,
    "id": "30ce3a84",
    "metadata": {},
    "outputs": [
