--- a/Advertisement Spending.ipynb
+++ b/Advertisement Spending.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4986aa36",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "a6055ff5",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 47ms/step\n",
-      "[[3320.336]]\n"
+      "[[3278.2222]]\n"
      ]
     }
    ],
@@ -39,6 +39,232 @@
     "model.fit(ad_spend,product_sales,epochs=200,verbose=0)\n",
     "\n",
     "print(model.predict(np.array([600])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "34cf058b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1️⃣ Customer Age vs Purchase Probability (Sigmoid)\n",
+    "# Training Data:\n",
+    "# Customer Age: [18, 25, 35, 45, 60]\n",
+    "# Purchase Probability: [0.1, 0.3, 0.5, 0.7, 0.9]\n",
+    "# Question: Build a neural network with 1 hidden layer using sigmoid activation to predict\n",
+    "#  the purchase probability for a 50-year-old customer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7fa343a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 48ms/step\n",
+      "[[0.62757194]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "customer_age = np.array([18,25,35,45,60])\n",
+    "purchase_probability = np.array([0.1,0.3,0.5,0.7,0.9])\n",
+    "\n",
+    "customer_model = tf.keras.Sequential([\n",
+    "    tf.keras.Input(shape=(1,)),\n",
+    "    tf.keras.layers.Dense(1,activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "customer_model.compile(optimizer = 'sgd',loss='mean_squared_error')\n",
+    "\n",
+    "customer_model.fit(customer_age,purchase_probability,epochs=200,verbose=0)\n",
+    "\n",
+    "print(customer_model.predict(np.array([50])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b7c11ac2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2️⃣ Study Hours vs Exam Score (ReLU)\n",
+    "# Training Data:\n",
+    "# Hours Studied: [0, 1, 2, 3, 4, 5]\n",
+    "# Exam Score: [0, 20, 40, 60, 80, 100]\n",
+    "# Question: Build a neural network using ReLU activation in the \n",
+    "# hidden layer to predict the exam score for 6 hours of study."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "372828d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step\n",
+      "[[6.6914067]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "study_hours = np.array([0,1,2,3,4,5])\n",
+    "exam_score = np.array([0,20,40,60,80,100])\n",
+    "\n",
+    "study_model = tf.keras.Sequential([\n",
+    "    tf.keras.Input(shape=(1,)),\n",
+    "    tf.keras.layers.Dense(4, activation='relu'),  # hidden layer\n",
+    "    tf.keras.layers.Dense(1)\n",
+    "])\n",
+    "\n",
+    "study_model.compile(optimizer='adam',loss='mse')\n",
+    "study_model.fit(study_hours, exam_score, epochs=300,verbose=0)\n",
+    "print(study_model.predict(np.array([6])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "959a4628",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 51ms/step\n",
+      "[[119.999985]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "study_hours = np.array([0,1,2,3,4,5], dtype=float)\n",
+    "exam_score = np.array([0,20,40,60,80,100], dtype=float)\n",
+    "\n",
+    "# Scale the data\n",
+    "study_hours_scaled = study_hours / 5\n",
+    "exam_score_scaled = exam_score / 100\n",
+    "\n",
+    "study_model = tf.keras.Sequential([\n",
+    "    tf.keras.Input(shape=(1,)),\n",
+    "    tf.keras.layers.Dense(17, activation='relu'),\n",
+    "    tf.keras.layers.Dense(1)\n",
+    "])\n",
+    "\n",
+    "study_model.compile(optimizer='adam', loss='mse')\n",
+    "study_model.fit(study_hours_scaled, exam_score_scaled, epochs=2000, verbose=0)\n",
+    "\n",
+    "# Predict for 6 hours\n",
+    "pred_scaled = study_model.predict(np.array([6/5]))\n",
+    "pred = pred_scaled * 100\n",
+    "print(pred)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d81acf6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4️⃣ Daily Steps vs Calories Burned (Tanh)\n",
+    "# Training Data:\n",
+    "# Steps: [1000, 3000, 5000, 7000, 10000]\n",
+    "# Calories Burned: [50, 150, 250, 350, 500]\n",
+    "# Question: Build a neural network with Tanh activation to predict calories burned for 8000 steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b3947021",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 53ms/step\n",
+      "[[411.16094159]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "steps = np.array([1000, 3000, 5000, 7000, 10000], dtype=float)\n",
+    "calories = np.array([50, 150, 250, 350, 500], dtype=float)\n",
+    "\n",
+    "# Normalize input\n",
+    "steps_norm = (steps - steps.mean()) / steps.std()\n",
+    "\n",
+    "# Normalize output\n",
+    "cal_mean = calories.mean()\n",
+    "cal_std = calories.std()\n",
+    "calories_norm = (calories - cal_mean) / cal_std\n",
+    "\n",
+    "calories_model = tf.keras.Sequential([\n",
+    "    tf.keras.Input(shape=(1,)),\n",
+    "    tf.keras.layers.Dense(32, activation='tanh'),\n",
+    "    tf.keras.layers.Dense(16, activation='tanh'),\n",
+    "    tf.keras.layers.Dense(1)   # linear output\n",
+    "])\n",
+    "\n",
+    "calories_model.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "\n",
+    "calories_model.fit(steps_norm, calories_norm, epochs=300, verbose=0)\n",
+    "\n",
+    "# Predict for 8000 steps\n",
+    "value = (8000 - steps.mean()) / steps.std()\n",
+    "pred_norm = calories_model.predict(np.array([[value]]))\n",
+    "\n",
+    "# Denormalize back to actual calories\n",
+    "predicted_calories = pred_norm * cal_std + cal_mean\n",
+    "print(predicted_calories)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb7c3a1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5️⃣ Advertisement Impressions vs Click Probability (Sigmoid)\n",
+    "# Training Data:\n",
+    "# Impressions (thousands): [10, 20, 30, 40, 50]\n",
+    "# Click Probability: [0.01, 0.05, 0.1, 0.15, 0.2]\n",
+    "# Question: Build a neural network with sigmoid activation in the\n",
+    "#  output layer to predict click probability for 60k impressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f6444fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "impressions = np.array([10,20,30,40,50])\n",
+    "click_probability = np.array([0.01,0.05,0.1,0.15,0.2])\n",
+    "\n",
+    "click_model = tf.keras.Sequential([\n",
+    "    tf.keras.Input(shape=(1,)),\n",
+    "    tf.keras.layers.Dense(1,activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "click_model.compile()"
    ]
   }
  ],
