--- a/Advertisement Spending.ipynb
+++ b/Advertisement Spending.ipynb
@@ -21,8 +21,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 47ms/step\n",
-      "[[3278.2222]]\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 58ms/step\n",
+      "[[3304.2524]]\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "7fa343a1",
    "metadata": {},
    "outputs": [
@@ -66,8 +66,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 48ms/step\n",
-      "[[0.62757194]]\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 73ms/step\n",
+      "[[1.3362535e-06]]\n"
      ]
     }
    ],
@@ -112,8 +112,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step\n",
-      "[[6.6914067]]\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 69ms/step\n",
+      "[[5.7335196]]\n"
      ]
     }
    ],
@@ -142,8 +142,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 51ms/step\n",
-      "[[119.999985]]\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 71ms/step\n",
+      "[[119.70484]]\n"
      ]
     }
    ],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "b3947021",
    "metadata": {},
    "outputs": [
@@ -197,8 +197,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 53ms/step\n",
-      "[[411.16094159]]\n"
+      "WARNING:tensorflow:5 out of the last 5 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x000002652A547EC0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 103ms/step\n",
+      "[[413.18130152]]\n"
      ]
     }
    ],
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cb7c3a1b",
    "metadata": {},
    "outputs": [],
@@ -251,20 +252,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5f6444fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 54ms/step\n",
+      "[[0.39966747]]\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
     "impressions = np.array([10,20,30,40,50])\n",
     "click_probability = np.array([0.01,0.05,0.1,0.15,0.2])\n",
     "\n",
+    "# Scale inputs\n",
+    "impressions_scaled = impressions / 100\n",
+    "new_input = np.array([60]) / 100\n",
+    "\n",
     "click_model = tf.keras.Sequential([\n",
     "    tf.keras.Input(shape=(1,)),\n",
-    "    tf.keras.layers.Dense(1,activation='sigmoid')\n",
+    "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
     "])\n",
     "\n",
-    "click_model.compile()"
+    "click_model.compile(optimizer='adam', loss='mse')\n",
+    "click_model.fit(impressions_scaled, click_probability, epochs=500, verbose=0)\n",
+    "\n",
+    "print(click_model.predict(new_input))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd4c5f4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7️⃣ Social Media Posts vs Engagement (Leaky ReLU)\n",
+    "# Training Data:\n",
+    "# Posts per Day: [1, 2, 3, 4, 5]\n",
+    "# Engagement Score: [10, 20, 30, 40, 50]\n",
+    "# Question: Build a neural network with Leaky ReLU to predict engagement if 0 posts are made."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "58458a59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 59ms/step\n",
+      "[[0.19884071]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "posts = np.array([1,2,3,4,5])\n",
+    "engagement = np.array([10,20,30,40,50])\n",
+    "\n",
+    "post_model = tf.keras.Sequential([\n",
+    "    tf.keras.Input(shape=(1,)),\n",
+    "    tf.keras.layers.Dense(1,activation='relu')\n",
+    "])\n",
+    "\n",
+    "post_model.compile(optimizer='adam',loss='mse')\n",
+    "\n",
+    "post_model.fit(posts,engagement,epochs=200,verbose=0)\n",
+    "print(post_model.predict(np.array([0])))\n"
    ]
   }
  ],
