--- a/Advertisement Spending.ipynb
+++ b/Advertisement Spending.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "4986aa36",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "58458a59",
    "metadata": {},
    "outputs": [
@@ -311,24 +311,194 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 59ms/step\n",
-      "[[0.19884071]]\n"
+      "WARNING:tensorflow:6 out of the last 6 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x00000245C7898A40> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 44ms/step\n",
+      "[[0.]]\n"
      ]
     }
    ],
    "source": [
-    "posts = np.array([1,2,3,4,5])\n",
-    "engagement = np.array([10,20,30,40,50])\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
     "\n",
-    "post_model = tf.keras.Sequential([\n",
-    "    tf.keras.Input(shape=(1,)),\n",
-    "    tf.keras.layers.Dense(1,activation='relu')\n",
+    "posts = np.array([[1],[2],[3],[4],[5]])\n",
+    "engagement = np.array([[10],[20],[30],[40],[50]])\n",
+    "\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Input(shape=(1,)),\n",
+    "    tf.keras.layers.Dense(1, use_bias=False)   # perfect linear mapping\n",
     "])\n",
     "\n",
-    "post_model.compile(optimizer='adam',loss='mse')\n",
+    "model.compile(optimizer='adam', loss='mse')\n",
     "\n",
-    "post_model.fit(posts,engagement,epochs=200,verbose=0)\n",
-    "print(post_model.predict(np.array([0])))\n"
+    "model.fit(posts, engagement, epochs=500, verbose=0)\n",
+    "\n",
+    "print(model.predict(np.array([[0]])))  # fixed shape, no retracing\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "102ee022",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8️⃣ Movie Ratings vs Viewer Satisfaction (Tanh)\n",
+    "# Training Data:\n",
+    "# Ratings (1-5): [1, 2, 3, 4, 5]\n",
+    "# Satisfaction Score (-1 to 1): [-0.9, -0.5, 0, 0.5, 0.9]\n",
+    "# Question: Build a neural network using Tanh activation to predict satisfaction for a rating of 3.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a04d6e87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 49ms/step\n",
+      "[[0.32061324]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "ratings = np.array([1,2,3,4,5])\n",
+    "satisfaction = np.array([-0.9,-0.5,0,0.5,0.9])\n",
+    "\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Input(shape=(1,)),\n",
+    "    tf.keras.layers.Dense(8, activation='tanh'),\n",
+    "    tf.keras.layers.Dense(1, activation='tanh')\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='mse')\n",
+    "\n",
+    "model.fit(ratings, satisfaction, epochs=2000, verbose=0)\n",
+    "\n",
+    "print(model.predict(np.array([[3.5]])))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cd62073",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9️⃣ Product Ratings vs Purchase Likelihood (Softmax)\n",
+    "# Training Data (multi-class scenario):\n",
+    "# Ratings (3 products): [[1,2,3], [2,3,4], [3,4,5]]\n",
+    "# Question: Build a neural network using Softmax in the \n",
+    "# output layer to predict probability distribution for [2,3,4]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "080d9222",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 53ms/step\n",
+      "Softmax Probability Distribution:\n",
+      "[[0.23512796 0.33157203 0.4333    ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[1,2,3],\n",
+    "                      [2,3,4],\n",
+    "                      [3,4,5]])\n",
+    "\n",
+    "y = np.array([0,1,2])\n",
+    "\n",
+    "y_onehot = tf.keras.utils.to_categorical(y, num_classes=3)\n",
+    "\n",
+    "modelr = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Input(shape=(3,)),       # Input layer: 3 numbers per sample\n",
+    "    tf.keras.layers.Dense(8, activation='relu'),  # Hidden layer\n",
+    "    tf.keras.layers.Dense(3, activation='softmax') # Output: 3-class softmax\n",
+    "])\n",
+    "\n",
+    "\n",
+    "modelr.compile(optimizer='adam',loss='categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "modelr.fit(x, y_onehot, epochs=500, verbose=0)\n",
+    "\n",
+    "test_input = np.array([[2, 3, 4]])\n",
+    "prediction = modelr.predict(test_input)\n",
+    "\n",
+    "print(\"Softmax Probability Distribution:\")\n",
+    "print(prediction)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cb718c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 🔟 Investment Amount vs Expected Return (Sigmoid)\n",
+    "# Training Data:\n",
+    "# Investment Amount ($k): [1,2,3,4,5]\n",
+    "# Expected Return Probability: [0.1,0.2,0.5,0.7,0.9]\n",
+    "# Question: Build a neural network using sigmoid activation in the \n",
+    "# output layer to estimate return probability for $6k investment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "72f59d9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step\n",
+      "[[0.93720233]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# Data\n",
+    "investment = np.array([[1],[2],[3],[4],[5]])\n",
+    "expected = np.array([0.1,0.2,0.5,0.7,0.9])\n",
+    "\n",
+    "# Scale input\n",
+    "scaler = MinMaxScaler()\n",
+    "investment_scaled = scaler.fit_transform(investment)\n",
+    "\n",
+    "# FIXED MODEL: Add hidden layer\n",
+    "investment_model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Input(shape=(1,)),\n",
+    "    tf.keras.layers.Dense(8, activation='relu'),\n",
+    "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "investment_model.compile(optimizer='adam', loss='mse')\n",
+    "investment_model.fit(investment_scaled, expected, epochs=500, verbose=0)\n",
+    "\n",
+    "# Predict scaled 6\n",
+    "scaled_6 = scaler.transform(np.array([[6]]))\n",
+    "print(investment_model.predict(scaled_6))\n"
    ]
   }
  ],
