--- a/Advertisement Spending.ipynb
+++ b/Advertisement Spending.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "72f59d9f",
    "metadata": {},
    "outputs": [
@@ -468,8 +468,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step\n",
-      "[[0.93720233]]\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 82ms/step\n",
+      "[[0.79373777]]\n"
      ]
     }
    ],
@@ -498,7 +498,8 @@
     "\n",
     "# Predict scaled 6\n",
     "scaled_6 = scaler.transform(np.array([[6]]))\n",
-    "print(investment_model.predict(scaled_6))\n"
+    "print(investment_model.predict(scaled_6))\n",
+    "\n"
    ]
   }
  ],
